# catime_rust

./: .gitignore  Cargo.toml  README.md  config.toml
crates/timer-app/: Cargo.toml
crates/timer-app/src/: controller.rs  lib.rs
crates/timer-core/: Cargo.toml
crates/timer-core/src/: command.rs  event.rs  lib.rs  timer.rs  view_state.rs
crates/timer-egui/: Cargo.toml
crates/timer-egui/src/: app.rs  main.rs  tray.rs  ui_command.rs  watcher.rs
crates/timer-storage/: Cargo.toml
crates/timer-storage/src/: config.rs  lib.rs  repository.rs
crates/timer-win32/: Cargo.toml
crates/timer-win32/src/: countdown_dialog.rs  main.rs  render.rs  tray.rs  watcher.rs  window.rs
