[package]
name = "timer-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "catime"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true
eframe.workspace = true
egui.workspace = true
tray-icon.workspace = true
notify.workspace = true
image.workspace = true
timer-core.workspace = true
timer-storage.workspace = true
timer-app.workspace = true
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
] }
