[package]
name = "timer-win32"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "catime"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }
ctrlc.workspace = true
log.workspace = true
env_logger.workspace = true
notify.workspace = true
image.workspace = true
timer-core.workspace = true
timer-storage.workspace = true
timer-app.workspace = true
